<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/right_slide_close_iv"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:scaleType="center"
            android:src="@mipmap/fork" />

        <ImageView
            android:id="@+id/search_iv"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_alignParentEnd="true"
            android:scaleType="center"
            android:src="@mipmap/search_white" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:scaleType="center"
        android:src="@mipmap/weread_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp">

        <View
            android:layout_width="91.0dip"
            android:layout_height="0.5dip"
            android:layout_centerVertical="true"
            android:background="@color/color_line_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleType="center"
            android:src="@mipmap/weread_signature" />

        <View
            android:layout_width="91.0dip"
            android:layout_height="0.5dip"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/color_line_2" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_home_page"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/words_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_words"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/voice_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_voice"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/video_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_video"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/calendar_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_calendar"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/str_power_text"
        android:textColor="@color/color_text_2"
        android:textSize="11.0sp" />

</LinearLayout>