<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/right_menus_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/left_slide_close_iv"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:scaleType="center"
            android:src="@mipmap/fork" />

        <ImageView
            android:id="@+id/setting_iv"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_alignParentEnd="true"
            android:scaleType="center"
            android:src="@mipmap/setting" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/avatar_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40.0dip"
        android:src="@mipmap/avater_default"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_msg"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/words_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_star"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/voice_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_offline"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/video_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/str_note"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp"
        android:src="@mipmap/logo_owspace" />

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/str_version_default"
        android:textColor="@color/color_text_2"
        android:textSize="11.0sp" />

</LinearLayout>